--- a/images/fig_p93_16_b.tex
+++ b/images/fig_p93_16_b.tex
@@ -1,17 +1,19 @@
 \begin{tikzpicture}
 \tikzstyle{point}=[circle,thick,draw=black,fill=black,inner sep=0pt,minimum width=4pt,minimum height=4pt]
     \node (P)[point,label={[label distance=-1cm]210:$O$}] at (0,0) {};
-    \node (B)[point,label={[label distance=0cm]-90:$B$}] at (2.5,0) {};
-    \node (Q)[point,label={[label distance=0cm]-90:$Q$}] at (4,0) {};
-    \node (C)[point,label={[label distance=0cm]90:$C$}] at (1.5*0.8,1.5*0.8) {};
-    \node (R)[point,label={[label distance=0cm]90:$R$}] at (2.5,2.5) {};
+    \node (B)[point,label={[label distance=0cm]-90:$A$}] at (2.0,0) {};
+    \node (Q)[point,label={[label distance=0cm]-90:$P$}] at (4,0) {};
+    \node (C)[point,label={[label distance=0cm]90:$A^{'}$}] at (1.5*0.8,1.5*0.8) {};
+    \node (R)[point,label={[label distance=0cm]90:$P^{'}$}] at (2.5,2.5) {};
+    \node (Bb)[point,label={[label distance=0.21cm]90:$A^{"}$}] at (3.25,1.5*0.8) {};
 
-    \node (A)[label={[label distance=0cm]:$\frac{\left|RC\right|}{\left|CO\right|}=\frac{\left|QB\right|}{\left|BO\right|} \ \Leftrightarrow CB \parallel RQ  $}] at(2,-2) {};
+    \node (A)[label={[label distance=0cm]:$\frac{\left|P^{'}O\right|}{\left|P^{'}A^{'}\right|}=\frac{\left|PO\right|}{\left|PA\right|} =\frac{\left|P^{'}P\right|}{\left|A^{"}P^{'}\right|}\ \Leftrightarrow A^{'}A \parallel P^{'}P  $}] at(2,-2) {};
 
     \draw[] (P) edge node  {} (B);
     \draw[] (B) edge node  {} (Q);
     \draw[] (P) edge node  {} (C);
     \draw[] (C) edge node  {} (R);
+    %\draw[] (C) edge node  {} (Bb);
 
     \draw[] (B) edge node  {} (C);
     %\draw[] (C) edge node  {} (A);
@@ -22,4 +24,5 @@
     \draw[] ($(P)!-1cm!(R)$) -- ($(R)!-1cm!(P)$);
     \draw[] ($(C)!-1cm!(B)$) -- ($(B)!-1cm!(C)$);
     \draw[] ($(R)!-1cm!(Q)$) -- ($(Q)!-1cm!(R)$);
+    \draw[dashed] ($(Bb)!-1cm!(B)$) -- ($(B)!-1cm!(Bb)$);
 \end{tikzpicture} 
