--- a/images/fig_p91_153_a.tex
+++ b/images/fig_p91_153_a.tex
@@ -2,7 +2,7 @@
 \pgfplotsset{every axis/.append style={
 		view={-10*1}{-30*1},
 		%view={-90}{-30*0},
-		scale=3,
+		scale=2.5,
 		%axis lines=center,
 		axis on top,
 		xlabel={$y$},
@@ -21,7 +21,7 @@
     \pgfplotsset{compat=1.12};
 
     	
-	\begin{axis}
+\begin{axis}
 		[
 		xmin=-1.5,
 		xmax=1.5,
@@ -71,10 +71,10 @@
 		({0.5*sin(deg(\t))},{0.5*cos(deg(\t))},{\t*1.5 });
 		
 		%2D graph
-	    	\coordinate (P) at (0.7,0,6);
-		\coordinate (O) at (0.7,0,3);
-		\coordinate (Q) at (0.7+0.6,0,6);
-		\coordinate (R) at (0.7+0.6,0,3);
+	    	\coordinate (P) at (0.7,0,6+2);
+		\coordinate (O) at (0.7,0,2.5);
+		\coordinate (Q) at (0.7+1,0,6+2);
+		\coordinate (R) at (0.7+1,0,2.5);
 		\coordinate (xO) atat (0.7+0.05,0,3+0.2);
 		\coordinate (xY) at (0.7+0.05,0,3+2.5);
 		\coordinate (xZ) at (0.7+10*0.05,0,3+0.2);
@@ -90,48 +90,67 @@
 		\draw (Q)--(R);
 		\draw (R)--(O);
 		%axes
-		\draw[-stealth,thick] (xO)--(xY);
-		\draw [-stealth,thick](xO)--(xZ);
+		\draw[-stealth] (xO)--(xY);
+		\draw [-stealth](xO)--(xZ);
 		%curves
-		\coordinate (p1) at (0.75+10*0.05,0,3+1.5);
-		\coordinate (p2)  at (0.7+10*0.05,0,3+1.1);
-		\draw (xO)--(p1);
-		\draw(xO)--(p2);
+		\coordinate (p1) at (0.75+10*0.07,0,5+1.);
+		\coordinate (p2)  at (0.7+10*0.07,0,3+1.1);
+
+		 \draw[-latex,thick] (xO) -- (p1) node[midway,above right] {} coordinate (X);
+		 \draw[-latex,thick] (xO) -- (p2) node[midway,above right] {} coordinate (Y);
+		 %draw an arc
+		  \draw[Latex-] let
+    				\p0 = (xO),
+    				\p1 = (X),
+    				\p2 = (Y),
+    				\n1 = {atan2(\y1 - \y0,\x1 - \x0)},
+   				 \n2 = {atan2(\y2 - \y0,\x2 - \x0)},
+   				 \n3 = {2.7cm},
+    				\n4 = {(\n1 + \n2) / 2}
+ 				 in (xO) +(\n1:\n3) arc[radius = \n3, start angle = \n1, end angle = \n2]node[midway,above right] {$\theta$};
+
+		 
 		%point on cylinder
+		\coordinate (o1) at ({0},{\r},{0});
 		\coordinate (q1) at ({0.5*sin(360},{0.5*cos(360)},{9.4});
 		\coordinate (r1) at ({0.5*sin(360},{0.5*cos(360)},{6.3});
 		\draw[] (q1) circle (5pt);
 		\draw[] (r1) circle (5pt);
+		\draw[] (o1) circle (5pt);
 
 		%point in graph
-		\coordinate (q2) at ({1.12},{0},{4.4});
-		\coordinate (r2) at ({1.12},{0},{4.0});
+		\coordinate (q2) at ({1.12},{0},{5.4-0.35});
+		\coordinate (r2) at ({1.12},{0},{4.0-0.2});
 		%arrows
-		  \draw[dotted, -stealth,thick, postaction={decorate}] (q1) .. controls (0.5, 0,10) .. (q2) ;
+		  \draw[dotted, -stealth,thick, postaction={decorate}] (q1) .. controls (0.5, 0,9) .. (q2) ;
 		  \draw[dotted, -stealth, thick, postaction={decorate}] (r1) .. controls (0.5, 0,7) .. (r2) ;
 		  %initial conditions
 		  %vectors points
 		 \coordinate (icO) at ({0},{0.5},{0});
-		\coordinate (iC1) at ({0.5*1.1},{0.5},{1.1});
-		\coordinate (iC2) at ({0.5},{0.5},{1.5});
-		%arrows
-		  \draw[ -stealth,gray, very thick,postaction={decorate}] (icO) -- (iC1) ;
-		  \draw[ -stealth, ,gray, very thick,postaction={decorate}] (icO) --(iC2) ;
-		  %angles
-		  
-		  
-	% draw arc using the three points and a radius
-	  % arcs
-  	%\tdplotdefinepoints (0,0.,0)(0.5*1.1,0.5,1.1)(0.5,0.5,1.5);
-  	  	%\tdplotdefinepoints (0,0.,0)  (0,1,1.1)(0.5,0.5,1.5);
-  	  	%\tdplotdefinepoints (0.55,0.5,1.1)(0.5,0.5,1.5)(0,0.5,0);
-  	%\tdplotdrawpolytopearc[<->]{3}{anchor=north west}{$\theta$}
-  	
-  	%arrows
-		  \draw[ stealth-stealth,thick, postaction={decorate}] (iC1) .. controls (0.45, 0,0.5) .. (iC2) node[midway,right] {$\theta$};;
-		  %\draw[dotted, -stealth, thick, postaction={decorate}] (p2) .. controls (0.5, 0,0.5) .. (r2) ;
-		  
-		  \draw[ stealth-stealth,thick, postaction={decorate}] (p1) .. controls (1.25, 0,4.2) .. (p2) node[midway,right] {$\theta$};;
+		\coordinate (iC1) at ({0.5*1.54},{0.5},{1.1*1.4});
+		\coordinate (iC2) at ({0.5*1.54},{0.5},{1.5*1.7});
+		
+		
+		 \draw[-latex,thick] (icO) -- (iC1) node[midway,above right] {} coordinate (X1);
+		 \draw[-latex,thick] (icO) -- (iC2) node[midway,above right] {} coordinate (Y1);
+		  %draw an arc
+		  \draw[-Latex] let
+    				\p0 = (icO),
+    				\p1 = (X1),
+    				\p2 = (Y1),
+    				\n1 = {atan2(\y1 - \y0,\x1 - \x0)},
+   				 \n2 = {atan2(\y2 - \y0,\x2 - \x0)},
+   				 \n3 = {3.4cm},
+    				\n4 = {(\n1 + \n2) / 2}
+ 				 in (icO) +(\n1:\n3) arc[radius = \n3, start angle = \n1, end angle = \n2]node[midway,above right] {$\theta$};
+
+
+		\coordinate (omega1) at ({0.5*1.1},{0},{\H});
+		\coordinate (omega2) at  (0.7+0.75,0,6+1.5);
+				%labeling points
+		\node[tdplot_main_coords,{anchor=south west}] at (omega1){$\Omega$};
+		\node[tdplot_main_coords,{anchor=north west}] at (omega2){$M(\Omega)$};
+		\draw[dotted, -stealth,thick, postaction={decorate}] (omega1) .. controls (1.3, 0,\H*0.8) .. (omega2) ;
 		  
 \end{axis}
 
