--- a/images/fig_p96_3415_b.tex
+++ b/images/fig_p96_3415_b.tex
@@ -34,7 +34,7 @@
 			
 		%*******************************    first geodesics  ***********************************
 		\addplot3 [dashed,thin,decoration={markings, mark = at position 0.5 with {\arrow[scale = 2.5]{latex[reversed]}}},postaction ={decorate},samples=40,	samples y=0,	domain=90.0+10:0-10]
-		({-4.5+\ra*cos(x)},{-4.5+\ra*sin(x)},{0})node[above,left] {$\gamma_{1}$};
+		({-4.5+\ra*cos(x)},{-4.5+\ra*sin(x)},{0})node[above,left] {$T(\gamma_{1})$};
 		
 		
       		\def \f{19.6}%********************************************
