--- a/chapter3.tex
+++ b/chapter3.tex
@@ -8,10 +8,11 @@ Explain why the surfaces of an ordinary cylinder and an ordinary cone are to be 
 The reason is because those surfaces can be "unwrapped" like the figure below shows. 
 \begin{figure}[h]
 %\includegraphics[scale=.5]{Conemapping.jpg}
+
 \input{D:/MathLatex/images/fig_p82_21_a.tex}
 \caption{Unwrapping of a cone}
 \end{figure}\\
-For the cone, we can for each point $\ P $ on the cone, lying on a distance $\ h $ from the apex and making an angle $\Psi $,  associate on a plane,  a  point $ P^* $ lying at the same  distance $ h $ from the apex, taken as origin for the coordinate system, and making an angle $\theta =  k\Psi $ with $ k $ a constant depending on the shape of the cone. This pair of coordinates are polar coordinates with $ r \in (-\infty, + \infty)$ and $\theta \in [0, 2k\pi)$. 
+For the cone, we can for each point $\ P $ on the cone, lying on a distance $\ h $ from the apex and making an angle $\theta $,  associate on a plane,  a  point $ P^* $ lying at the same  distance $ h $ from the apex, taken as origin for the coordinate system, and making an angle $\phi =  \theta \sin{\alpha} $ with $ \alpha $ the angle of the cone. This pair of coordinates are polar coordinates with $ r \in (-\infty, + \infty)$ and $\theta \in [0, 2k\pi)$. 
 The same reasoning can be applied to a cylinder which is a cone with the apex at $\infty$. In that case the coordinate system becomes a Cartesian coordinate system. \\
 As a continuous mapping exist from polar to orthogonal Cartesian coordinates both  coordinate system can be written under the required form (3.101) and so can be called "flat".
 
@@ -254,7 +255,7 @@ Consider 4 geodesics $\gamma_{1}, \gamma_{2},\gamma_{3},\gamma_{4}$ close to eac
 \input{D:/MathLatex/images/fig_p96_3415_b.tex}
 \caption{Relationship between parallel transportation along a closed path and the excess of the angle-sum over four right angles of a quadilateral.}
 \end{figure}\\
-Let $\xi_{i}$ and $\xi^{o}_{i} \ (i=1,2,3,4)$ be respectively, tangent unit vectors to the  geodesics at the beginning and at the end of the intersections of the geodesics. Be $\widehat{\xi}_{i}$ and $\widehat{\xi}^{o}_{i} \ (i=1,2,3,4)$ the angles of these vectors relative to an arbitrary reference vector and Be $\widehat{\tau}_{i}$ and $\widehat{\tau}^{o}_{i} \ (i=0,2,3,4)$ the angles of the transported vector (relative to this arbitrary reference vector) at the intersections of the geodesics.
+Let $\xi_{i}$ and $\xi^{o}_{i} \ (i=1,2,3,4)$ be respectively, tangent unit vectors to the  geodesics at the beginning and at the end of the intersections of the geodesics. Be $\widehat{\xi}_{i}$ and $\widehat{\xi}^{o}_{i} \ (i=1,2,3,4)$ the angles of these vectors relative to an arbitrary reference vector and be $\widehat{\tau}_{i}$ and $\widehat{\tau}^{o}_{i} \ (i=0,2,3,4)$ the angles of the transported vector (relative to this arbitrary reference vector) at the intersections of the geodesics.
 Then,
 \begin{align}
 \left \{ \begin{array}{ll}
@@ -347,5 +348,169 @@ Due to the null effect of  parallel propagation on invariants, we  get
  ((T^r)_1+(\Delta T^r)_B )\ (Y_r)_{B}&=(T^r)_0 \ (Y_r)_{A,2}\\
  \text{(3)-(4)}\quad \Rightarrow \quad -(\Delta T^r)_B )\ (Y_r)_{B}&=(\Delta T^r)_{A})\ (Y_r)_{A,2}
 \end{align}\\
+$$\blacklozenge$$
+\newpage
+
+
+\section{p105 - Clarification}
+\begin{tcolorbox}
+\begin{align*}
+\textbf{3.521.} \spatie \dv{I}{v} &= \int_{u_1}^{u_2}\partial_v\left(T_n\partial_u x^n\right)du\\
+&= \int_{u_1}^{u_2}\fdv{T_n}{v}\partial_u x^n du + \int_{u_1}^{u_2}T_n\fdv{\left(\partial_u x^n\right)}{v} du. 
+\end{align*}
+Now $\fdv{T_n}{v}=0$, since $T_r$ is propagated along $\textit{all}$ curves in $V_n$.
+\end{tcolorbox}
+To better understand this last statement recall that from 3.515, we have
+\begin{align*}
+ \left( \Delta T^r \right)_B \left( Y_r \right)_B &= \int \int Y_rR^r_{.pmn}T^p\partial _u x^m \partial _v x^n du dv\\
+ &= 0 \quad \text{as} \spatie R^r_{.pmn}=0
+\end{align*}
+As $\left( Y_r \right)_B$ is arbitrary we have $\left( \Delta T^r \right)_B =0$. Consider Fig. 1.8 below.\\
+\begin{figure}[H]
+\center
+\input{D:/MathLatex/images/fig_p105_3521_a.tex}
+\caption{Parallel transportation along a path in a space with zero curvature tensor}
+\end{figure}
+Consider the path $A\rightarrow P \rightarrow P^{'}$, $ P$ being situated at the parametric coordinates $(u, v)$ and $P^{'}$ at $(u, v + dv)$. For this path we have also $\left( \Delta T^r \right)_{P,P^{'}} =0$. So $(T^r)_{u,v} = (T^r)_A$ and $(T^r)_{u,v+dv} = (T^r)_{u,v}$ and thus $\fdv{T_r}{v}=0$.
+$$\blacklozenge$$
+\newpage
+
+\section{p108 - Exercise 2}
+\begin{tcolorbox}
+Take as manifold $V_2$ the surface of an ordinary right circular cone, and consider one of the circular sections. A vector in $V_2$ is propagated parallely round this circle. Show that its direction is changed on completion of the circuit. can you reconcile this result with the fact that $V_2$ is flat?
+\end{tcolorbox}
+Before answering the question, we first investigate the geometry of a simple cone with opening angle $\alpha$, by examining the geodesics on such manifold.\\
+\begin{figure}[h]
+\center
+\input{D:/MathLatex/images/fig_p108_Ex2_a.tex}
+\caption{Intrinsic coordinates on  a cone}
+\end{figure}
+We take as coordinate system $\left(u,\theta \right)$, embedded in the manifold, $u$ being the distance of the considered point to the apex of the cone and $\theta$ the angle with a arbitrary vector laying in a plane perpendicular to the axis of the cone.\\
+It is not hard to see that the fundamental form for this manifold is $$ \Phi = du^2+ \underbrace{k}_{= \ \sin^2 \alpha}u^2 d\theta^2 $$ 
+We have 
+\begin{align}
+ (a_{mn})= \begin{pmatrix}
+ 1&0  \\
+ 0& k u^2 \\
+\end{pmatrix}\quad
+ (a^{mn})= \begin{pmatrix}
+ 1&0  \\
+ 0& \frac{1}{k u^2} \\
+\end{pmatrix}\\
+ \begin{pmatrix}
+ \left[ mn,u \right] \\
+ \left[ mn,\theta \right] \\
+\end{pmatrix}=\begin{pmatrix}
+ 0&0&-k u \\
+ k u&0&0 \\
+\end{pmatrix}\\
+ \begin{pmatrix}
+ \Gamma^u_{mn} \\
+ \Gamma^{\theta}_{mn} \\
+\end{pmatrix}=\begin{pmatrix}
+ 0&0&-k u \\
+ 0&\frac{1}{u}&0 \\
+\end{pmatrix}
+\end{align}
+and get as geodesic equations by using $\theta$ as parameter for the curve:
+\begin{align}
+ \dv[2]{u}{\theta} - k u &=0 \\
+ \frac{1}{u}\dv{u}{\theta}&=0
+\end{align}
+From (5) we have one solution i.e. $u = constant$ and corresponds to a circular section of the cone.
+From equation (4) we get another form of the geodesics
+\begin{align}
+ \frac{\ddot{u}}{u}&=k\\
+ \Rightarrow \spatie u &= p^{'} k\left( e^{\sqrt{k}\theta + r}+ e^{-\sqrt{k}\theta - r}\right) \quad (p^{'},r = constants)\\
+  &= p k \cosh(\sqrt{k}\theta + r) \quad (p = 2\ p^{'})
+\end{align}
+With the initial condition $\left. u\right|_{\theta=0} = u_0$ and $\left. \dot{u}\right|_{\theta=0} = v_0$ we get
+\begin{align}
+\begin{array}{ll}
+  r = \tanh ^{-1}\left(\sqrt{k}\frac{v_0}{u_0}\right)& \sqrt{k}\frac{v_0}{u_0} \in \left (-1,1\right)\\
+  p = \frac{u_0}{\cosh{b}}&\\
+\end{array}
+\end{align}
+\begin{figure}[H]
+\center
+\input{D:/MathLatex/images/fig_p108_Ex2_b.tex}
+\caption{Geodesic on  a cone}
+\end{figure}
+Note also that we get a third kind of geodesics when we take $u$ as parameter. One of the geodesic differential equation becomes then $k \ u \ \dot{\theta}^2 = 0$ giving $\theta = constant$ as solution which corresponds to a straight line intersecting the apex and  the starting point of the geodesic. 
+\newpage
+Let's now calculate the parallel transportation of a vector $T^r$ along a circle somewhere on the cone. Taking $\theta$ as the parameter of the curve, the equation of the curve is $(u=u_0,\ \theta) \quad \theta \in \ \left[0, 2\pi \right)$. We have for parallel transportation along that curve $\fdv{T^r}{\theta}=0$ and get
+\begin{align}
+ & \left \{ \begin{array}{l}
+\dv{T^u}{\theta} + \Gamma^u_{\theta \theta}T^{\theta}\dv{\theta}{\theta} =0\\\\
+\dv{T^{\theta}}{\theta} + \Gamma^{\theta}_{u \theta}T^{u}\dv{\theta}{\theta}+ \Gamma^{\theta}_{\theta u}T^{\theta}\underbrace{\dv{u}{\theta}}_{=0} =0\quad \left(\dv{u}{\theta} = 0 \quad \text{as} \quad u= C^{st} \right)
+\end{array} \right.\\
+\Rightarrow \quad
+ & \left \{ \begin{array}{l}
+\dot{T^u} -ku_0 T^{\theta}=0\\\\
+\dot{T}^{\theta} + \frac{1}{u_0}T^{u}=0
+\end{array} \right.\\
+\Rightarrow \quad
+ & \left \{ \begin{array}{l}
+\frac{\ddot{T}^u}{T^{u}} = -k\\\\
+\dot{T}^{\theta} =- \frac{T^{u}}{u_0}
+\end{array} \right.
+\end{align}
+From the first equation in (11) we deduce that a solution can be of the form\\ $T^u = p^{'}\left( e^{(a \theta + b^{'})}+ e^{-(a \theta + b^{'})}\right)$. Substituting in (12) we see that $a^2 = -k \rightarrow a = \pm i\sqrt{k}$. Replacing $b^{'}$ by $ib$ the solution for the system of differential equations (12) becomes
+\begin{align}
+T^u  &= p^{'}\left( e^{i(\sqrt{k} \theta + b)}+ e^{-i(\sqrt{k} \theta + b)}\right)\\
+ &= p\cos{\left(\sqrt{k} \theta + b \right)}\\
+ \Leftrightarrow \quad &=   C_1\sin{\sqrt{k}\theta}+ C_2\cos{\sqrt{k}\theta}\\
+ \text{(15) in (12) gives:}\quad & \left \{ \begin{array}{l}
+T^u = C_1\sin{\sqrt{k}\theta}+ C_2\cos{\sqrt{k}\theta}\\\\
+T^{\theta}  =  \frac{1}{\sqrt{k}u_0}\left(C_1\cos{\sqrt{k}\theta}- C_2\sin{\sqrt{k}\theta}\right)\\
+\end{array} \right.\\
+\text{with} \quad & \left \{ \begin{array}{l}
+ C_1=\sqrt{k}u_0\left.T^{\theta}\right|_{\theta=0} \\\\
+ C_2=\left.T^{u}\right|_{\theta=0}\\
+\end{array} \right.\\
+\Rightarrow \quad & \left \{ \begin{array}{l}
+T^u = \sqrt{k} u_0 T^{\theta}_{0}\sin{\sqrt{k}\theta}+ T^{u}_{0}\cos{\sqrt{k}\theta}\\\\
+T^{\theta}  =   T^{\theta}_{0}\cos{\sqrt{k}\theta}- \frac{T^{u}_{0}}{\sqrt{k}u_0} \sin{\sqrt{k}\theta}\\
+\end{array}\right.
+\end{align}\\
+Let's now compute the angle $\phi$ between the starting vector $T^r_{0}$ and the vector $T^r$ parallely transported over an angle $\theta$ on the circle. We have (see $\textbf{(2.301.)}$ and $\textbf{(2.312.)}$):
+\begin{align}
+\left \{ \begin{array}{l}
+ \left| T^r_0 \right|^2 =  \left(T^u_0\right)^2 + k u^2_0\left(T^{\theta}_0\right)^2\\\\
+ \left| T^r \right|^2 =  \left(T^u_0\right)^2 + k u^2_0\left(T^{\theta}_0\right)^2\\\\
+ \cos{\phi} =  \frac{T^u_0 T^u+k u^2_0T^{\theta}_0 T^{\theta} }{\left(T^u_0\right)^2 + k u^2_0\left(T^{\theta}_0\right)^2}
+\end{array} \right.
+\end{align}
+The last equation in (19) becomes
+\begin{align}
+\cos{\phi} &= \cos{\sqrt{k}\theta} \\
+\Rightarrow \quad \phi &= \sqrt{k}\theta + 2m\pi\quad\quad (m= 0,\pm 1,\pm 2, \dots)
+\end{align}
+So for $\theta = 2\pi$ the angle between the starting vector and the transported vector is not $2m\pi$. The transported vector coincides with the initial vector only for $\theta = \frac{2(m-1)\pi}{\sqrt{k}}$.
+\begin{figure}[h]%
+    \centering
+    \subfloat[]{\input{D:/MathLatex/images/fig_p108_Ex2_c1.tex}}
+	\qquad
+    \subfloat[]{\input{D:/MathLatex/images/fig_p108_Ex2_c2.tex}}
+\caption{Relationship between parallel transportation along a closed path and unwrapping a cone .}
+\end{figure}\\
+Fig. 1.11. illustrates the analogy between \\
+(a): the $\parallel$ transportation of a vector $P$ along a circular curve $\gamma$ on the cone over an angle $\theta$ giving a vector $P_t$ making an angle $\phi = \sqrt{k}\theta$ with the starting vector, and \\
+(b): the result of "unwrapping" a cone. Be two vectors $\overrightarrow{OP}$ and $\overrightarrow{OP_t}$, $P$ and $P_t$ being two points placed at a distance $r\theta$ along a circle  with radius $r$. Placing the vector $\overrightarrow{OP}$ in the $XY$-plane and unwrapping the cone over an angle $\theta$ will map the vector $\overrightarrow{OP_t}$ in the $XY$-plane to a vector $\overrightarrow{OP_t^{*}}$ making an angle $\phi = \sqrt{k}\theta$ with the vector $\overrightarrow{OP}$.\\
+Finally let's calculate the curvature tensor. From the exercise on page 86 we know that for a $V_2$ all components of the curvature tensor can be expressed in terms of $R_{1212}$. We have
+\begin{align}
+R_{u\theta u\theta} &= \left \{ \begin{array}{l}
+\frac{1}{2}\left(\partial_{\theta u}a_{u \theta}+\partial_{u \theta}a_{\theta u}-\partial_{\theta \theta}a_{uu}-\partial_{u u}a_{\theta \theta}  \right) \\
+ + a^{pq}\left([u \theta,p][\theta u,q] -[u u,p][\theta \theta,q]  \right)
+\end{array} \right.
+&= \left \{ \begin{array}{l}
+-k \\
+ + a^{uu}\left(\underbrace{[u \theta,u][\theta u,u] -[u u,u][\theta \theta,u]}_{=0}  \right)\\
+ + \underbrace{a^{u \theta}}_{=0}\left([u \theta,u][\theta u,\theta] -[u u,u][\theta \theta,\theta]  \right)\\
+ + \underbrace{a^{\theta u}}_{=0}\left([u \theta,\theta][\theta u,u] -[u u,\theta][\theta \theta,u]  \right)\\
+ + \underbrace{a^{\theta \theta}}_{=\frac{1}{ku^2}}\left(\underbrace{[u \theta,\theta][\theta u,\theta]}_{= k^2u^2} -\underbrace{[u u,\theta][\theta \theta,\theta]}_{=0}  \right)\\
+\end{array} \right.
+\end{align}
+So indeed all components of the curvature tensor and hence $V_2$ is flat.
 $$\blacklozenge$$
 \newpage
