--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,7 @@
 \usetikzlibrary{decorations.pathmorphing,decorations.markings}
 \usetikzlibrary{decorations.pathreplacing} % for curly braces
 \usetikzlibrary {decorations.markings,shapes.arrows}
+\usetikzlibrary{patterns}
 \usepackage{tikz-3dplot}
 
 %\usepackage[margin=0cm,nohead]{geometry}
