--- a/chapter1.tex
+++ b/chapter1.tex
@@ -567,6 +567,7 @@ $\left\{ \begin{array}{c}
   \end{array} \right.$
 \end{minipage}
 \caption{Spherical coordinate system}
+\label{fig:fig_p23_117_a}
 \end{figure}
 Partial differentiating of (x,y,z) with respect to (r,$\theta$,$\phi$) gives the Jacobian
 \begin{align}
