--- a/chapter2.tex
+++ b/chapter2.tex
@@ -10,6 +10,7 @@ Take polar coordinates $r, \theta$ in a plane. Draw the infinitesimal triangle w
 %\includegraphics[scale=.5]{polar.jpg}
 \input{D:/MathLatex/images/fig_p27_21_a.tex}
 \caption{Metric tensor in polar coordinate system}
+\label{fig:fig_p27_21_a}
 \end{figure}
 \begin{align} 
 \ ds^2 &= |AB|^2\\
@@ -34,6 +35,7 @@ One can choose to start from $ds^2 = dx^2+dy^2+dz^2$ and then expanding the $dx^
     \centering
 \input{D:/MathLatex/images/fig_p27_22_a.tex}
 \caption{Metric tensor in spherical coordinate system}
+\label{fig:fig_p27_22_a}
 \end{figure}
 %\includegraphics[scale=.6]{sphericalmetric.jpg}\\\\
 Consider an infinitesimal displacement of point E to J with $(dr,d\theta, d\phi )$.
@@ -1025,6 +1027,7 @@ The answer is NO. Let's consider the following unit vector field in a Cartesian 
 $$V:\mathbb{R}_*^2\rightarrow \mathbb{R}^2|V(x,y) = \left< \frac{x}{\sqrt{x^2+y^2}},-\frac{y}{\sqrt{x^2+y^2}} \right>$$
 \end{minipage}
 \caption{Vector field for which $\lambda^r_{|s}\lambda_s = 0$ does not hold}
+\label{fig:fig_p62_236_a}
 \end{figure}
 Put $ r = \sqrt{x^2+y^2}$, we get (as we have a Cartesian Coordinate system, the  Christoffel symbols vanish and the covariant components of the vectors are equal to their contravariant part):
 \newpage
@@ -1063,6 +1066,7 @@ Now, let's consider another unit vector field in a Cartesian Coordinate system:
 $$V:\mathbb{R}_*^2\rightarrow \mathbb{R}^2|V(x,y) = \left< \frac{x}{\sqrt{x^2+y^2}},\frac{y}{\sqrt{x^2+y^2}} \right>$$
 \end{minipage}
 \caption{Vector field for which $\lambda^r_{|s}\lambda_s = 0$ hold}
+\label{fig:fig_p62_236_b}
 \end{figure}
 \begin{align}
 \ & \left \{ \begin{array}{c}
@@ -1419,7 +1423,7 @@ For cylindrical coordinates in Euclidean 3-space, write down the metric form by 
 
 %\includegraphics[scale=.4]{polar3d.jpg}
 \input{D:/MathLatex/images/fig_p78_247_a.tex}
-
+\label{fig:fig_p78_247_a}
 \end{figure}
 From the figure we may (assuming an infinitesimal displacement), we may approximate $\left| \overrightarrow{SS^{,}} \right|$ with the arclength $r d\theta$ and assume $\left|  \overrightarrow{S°S^{,,}} \right| \perp \left|  \overrightarrow{GS^{,}} \right|$) Hence, the infinitesimal displacement from S
 \begin{align}
@@ -2015,6 +2019,7 @@ In a plane, let $x^1, \  x^2$ be the distances of a general point from the point
 %\includegraphics[scale=.4]{Bipolar.jpg}
 \input{D:/MathLatex/images/fig_p79_260_a.tex}
 \caption{Bipolar coordinates}
+\label{fig:fig_p79_260_a}
 \end{figure}
 \begin{align}
 \ (x^1)^2 &= \left( y^1-1\right) ^2 + \left(y^2\right)^2\\
@@ -2060,6 +2065,7 @@ We use plane geometry to express expression (11) as  a function of only $(x^1,x^
 %\includegraphics[scale=.4]{Bipolar2.jpg}
 \input{D:/MathLatex/images/fig_p79_260_b.tex}
 \caption{Bipolar coordinates versus Cartesian coordinates}
+\label{fig:fig_p79_260_b}
 \end{figure}
 \begin{align}
 \ \left |  OP \right |^2 &= \frac{(x^1)^2+(x^2)^2}{2} - \underbrace{\frac{\left | AB \right|^2}{4}}_{=1}\\
