--- a/main.tex
+++ b/main.tex
@@ -114,8 +114,8 @@ m n\\
 
 \tableofcontents
 \listoffigures
-%\include{chapter1}
-%\include{chapter2}
+\include{chapter1}
+\include{chapter2}
 \include{chapter3}
 %\include{chapter4}
 %\include{chapter5}
