--- a/chapter3.tex
+++ b/chapter3.tex
@@ -186,6 +186,7 @@ and thus we get
 \input{D:/MathLatex/images/fig_p91_153_a.tex}
 \end{minipage}\hfill
 \caption{Geodesics on a cylinder}
+\label{fig:fig_p91_153_a}
 \end{figure}
 The above figure illustrates what an observer living in the manifold $\Omega$ sees when walking along geodesics on the cylinder.  He only can measure the distance $s^{'}$ and the displacement along $z$ and by (10) can only draw a chart like the one seen on the right of the cylinder. A "flatlander" living in the mapped manifold $M(\Omega)$ would see the same chart when walking along geodesics in his plane.\\\\
 \textbf{Conclusion:} No, studying the geodesic deviation on a right circular cylinder does not enable us to say on which surface we are.
@@ -202,13 +203,14 @@ We have equation 3.111
 \end{align}
 From exercise on page 83 we know that $R^r_{.smn}=0$ in an Euclidean space. Also, in such spaces, the Christoffels symbols vanish and equation (1) reduces to $ \dv[2]{\eta}{s} = 0$. And so, $$\eta^r = A^r s+B^r $$
 
-This is also easily deducted from a geometrical point of view. In an Euclidean space, the geodesics are straight lines. For an infinitesimal change in the geodesic family parameter $v$, we can assume that a vector, going perpendicular from 1 point from one geodesic with parameter $v$  to another infinitesimal close  geodesic with parameter $v+dv$,  will also be perpendicular on this geodesic. This situation is depicted in figure (a). We conclude that $\overrightarrow{AA^{'}} \ \parallel \ \overrightarrow{PP^{'}}$. This can also be deducted from Thales theorem (see fig. (b)). 
+This is also easily deducted from a geometrical point of view. In an Euclidean space, the geodesics are straight lines. For an infinitesimal change in the geodesic family parameter $v$, we can assume that a vector, going perpendicular from 1 point from one geodesic with parameter $v$  to another infinitesimal close  geodesic with parameter $v+dv$,  will also be perpendicular on this geodesic. This situation is depicted in fig. ~\ref{fig:fig_p93_16}(a). We conclude that $\overrightarrow{AA^{'}} \ \parallel \ \overrightarrow{PP^{'}}$. This can also be deducted from Thales theorem (see fig.~\ref{fig:fig_p93_16} (b)). 
 \begin{figure}[H]%
     \centering
     \subfloat[]{\input{D:/MathLatex/images/fig_p93_16_a.tex}}
 	\qquad
     \subfloat[]{\input{D:/MathLatex/images/fig_p93_16_b.tex}}
 \caption{Geometrical deduction of the geodesical deviation equation in an Euclidean space.}
+\label{fig:fig_p93_16}
 \end{figure}
 Hence, we than can say that,
 $$ \frac{\left|AA^{'}\right|}{u_0}=\frac{\left|PP^{'}\right|}{u}  $$
@@ -231,6 +233,7 @@ $V_2$ from family of geodesics
     %\caption{2 Figures side by side}%
     \label{fig:example}%
 \caption{$V_2$ manifold of a family of geodesics}
+\label{fig:fig_p93_16}
 \end{figure}
 \begin{figure}[h]%
     \centering
@@ -249,11 +252,13 @@ $$\blacklozenge$$
 \begin{figure}[h]
 \input{D:/MathLatex/images/fig_p96_3415_a.tex}
 \caption{Parallel transportation along a  closed path}
+\label{fig:fig_p96_3415_a}
 \end{figure}
 Consider 4 geodesics $\gamma_{1}, \gamma_{2},\gamma_{3},\gamma_{4}$ close to each other so that they form a small quadrilateral. At each intersection they form an angle $\Psi_{i\rightarrow i+1}$. A vector $\overrightarrow{u_{0}}$ is transported parallely along the path starting at the intersection $S$ of $\gamma_{1},\gamma_{4}$ and ends as vector $\overrightarrow{u_{t}}$ at the same point $S$. In general $\overrightarrow{u_{0}}\ne \overrightarrow{u_{t}}$ and will differ by a small angle $\delta\theta$. Let's investigate the relationship between $\delta\theta$ and the $\Psi_{i\rightarrow i+1}$.\\
 \begin{figure}[h]
 \input{D:/MathLatex/images/fig_p96_3415_b.tex}
 \caption{Relationship between parallel transportation along a closed path and the excess of the angle-sum over four right angles of a quadilateral.}
+\label{fig:fig_p96_3415_b}
 \end{figure}\\
 Let $\xi_{i}$ and $\xi^{o}_{i} \ (i=1,2,3,4)$ be respectively, tangent unit vectors to the  geodesics at the beginning and at the end of the intersections of the geodesics. Be $\widehat{\xi}_{i}$ and $\widehat{\xi}^{o}_{i} \ (i=1,2,3,4)$ the angles of these vectors relative to an arbitrary reference vector and be $\widehat{\tau}_{i}$ and $\widehat{\tau}^{o}_{i} \ (i=0,2,3,4)$ the angles of the transported vector (relative to this arbitrary reference vector) at the intersections of the geodesics.
 Then,
@@ -289,13 +294,14 @@ and so
 \begin{align}
 \delta \theta = -(\Psi_{1 \rightarrow 2}+\Psi_{2 \rightarrow 3}+\Psi_{3 \rightarrow 4}+\Psi_{4 \rightarrow 1})
 \end{align}\\
-Note that these relationships are valid on the (curved) $V_{2}$ manifold. In order to go further we map the quadrilateral, on the manifold, on it's tangent plane (see fig.1.6 a hereunder) - supposing that the quadrilateral is infinitesimally small and that we can find a conformal map from $\gamma$ to $T(\gamma)$.
+Note that these relationships are valid on the (curved) $V_{2}$ manifold. In order to go further we map the quadrilateral, on the manifold, on it's tangent plane (see fig.~\ref{fig:fig_p96_3415_d} (a) hereunder) - supposing that the quadrilateral is infinitesimally small and that we can find a conformal map from $\gamma$ to $T(\gamma)$.
 \begin{figure}[h]%
     \centering
     \subfloat[]{\input{D:/MathLatex/images/fig_p96_3415_c.tex}}
 	\qquad
     \subfloat[]{\input{D:/MathLatex/images/fig_p96_3415_d.tex}}
 \caption{Relationship between parallel transportation along a closed path and the excess of the angle-sum over four right angles of a quadrilateral.}
+\label{fig:fig_p96_3415_d}
 \end{figure}\\
 \\ Let's look at the point $p_2$ on $\partial \Omega$. We have $\nu_2 = \epsilon^{-}+\Psi_{1 \rightarrow 2} +\epsilon^{+}= \Psi_{1 \rightarrow 2}+\epsilon$. In general,
 \begin{align}
@@ -317,8 +323,9 @@ First we note that for an invariant "propagated parallely" along a curve we have
 \begin{figure}[h]
 \input{D:/MathLatex/images/fig_p102_3516_a.tex}
 \caption{Parallel transportation along a  closed path}
+\label{fig:fig_p102_3516_a}
 \end{figure}
-In Fig. 1.7 we use the following convention:\\
+In fig. ~\ref{fig:fig_p102_3516_a} we use the following convention:\\
 - a one black arrowed line means a forward propagation from $A$ to $B$ along $C_1$\\
 - a double black arrowed line means a forward propagation from $A$ to $B$ along $C_2$\\
 - a double open arrowed line means a backward propagation from $B$ to $A$ along $C_2$\\\\
@@ -365,11 +372,12 @@ To better understand this last statement recall that from 3.515, we have
  \left( \Delta T^r \right)_B \left( Y_r \right)_B &= \int \int Y_rR^r_{.pmn}T^p\partial _u x^m \partial _v x^n du dv\\
  &= 0 \quad \text{as} \spatie R^r_{.pmn}=0
 \end{align*}
-As $\left( Y_r \right)_B$ is arbitrary we have $\left( \Delta T^r \right)_B =0$. Consider Fig. 1.8 below.\\
+As $\left( Y_r \right)_B$ is arbitrary we have $\left( \Delta T^r \right)_B =0$. Consider fig. ~\ref{fig:fig_p105_3521_a} below.\\
 \begin{figure}[H]
 \center
 \input{D:/MathLatex/images/fig_p105_3521_a.tex}
 \caption{Parallel transportation along a path in a space with zero curvature tensor}
+\label{fig:fig_p105_3521_a}
 \end{figure}
 Consider the path $A\rightarrow P \rightarrow P^{'}$, $ P$ being situated at the parametric coordinates $(u, v)$ and $P^{'}$ at $(u, v + dv)$. For this path we have also $\left( \Delta T^r \right)_{P,P^{'}} =0$. So $(T^r)_{u,v} = (T^r)_A$ and $(T^r)_{u,v+dv} = (T^r)_{u,v}$ and thus $\fdv{T_r}{v}=0$.
 $$\blacklozenge$$
@@ -383,6 +391,7 @@ Take as manifold $V_2$ the surface of an ordinary right circular cone, and consi
 \center
 \input{D:/MathLatex/images/fig_p108_Ex2_a.tex}
 \caption{Intrinsic coordinates on  a cone}
+\label{fig:fig_p108_Ex2_a}
 \end{figure}
 We take as coordinate system $\left(u,\theta \right)$, embedded in the manifold, $u$ being the distance of the generator of the considered point to the apex of the cone and $\theta$ the angle with a arbitrary vector laying in a plane perpendicular to the axis of the cone.\\
 It is not hard to see that the fundamental form for this manifold is $$ \Phi = du^2+ \underbrace{k}_{= \ \sin^2 \alpha}u^2 d\theta^2 $$ 
@@ -483,15 +492,17 @@ So for $\theta = 2\pi$ the angle between the starting vector and the transported
 	\qquad
     \subfloat[]{\input{D:/MathLatex/images/fig_p108_Ex2_b2.tex}}
 \caption{Relationship between parallel transportation along a closed path and unwrapping a cone .}
+\label{fig:fig_p108_Ex2_b2}
 \end{figure}
-Fig. 1.10. illustrates the analogy between 
+Fig. ~\ref{fig:fig_p108_Ex2_b2} illustrates the analogy between 
 (a): the $\parallel$ transportation of a vector $P$ along a circular curve $\gamma$ on the cone over an angle $\theta$ giving a vector $P_t$ making an angle $\phi = \sqrt{k}\theta$ with the starting vector, and \\
 (b): the result of "unwrapping" a cone. Be two vectors $\overrightarrow{OP}$ and $\overrightarrow{OP_t}$, $P$ and $P_t$ being two points placed at a distance $r\theta$ along a circle  with radius $r$. Placing the vector $\overrightarrow{OP}$ in the $XY$-plane and unwrapping the cone over an angle $\theta$ will map the vector $\overrightarrow{OP_t}$ in the $XY$-plane to a vector $\overrightarrow{OP_t^{*}}$ making an angle $\phi = \sqrt{k}\theta$ with the vector $\overrightarrow{OP}$.\\
-The transported vector will only coincide with the initial vector for $\sqrt{k}=\sin{\alpha}  = \frac{1}{n}\quad (n= 1, 2, \dots)$. Fig. 1.11. illustrates this in the $X-Y$-plane,  for n=3. Only after a transportation over three periods, will the transported coincide with the initial vector. The dotted area represented the unwrapped cone.
+The transported vector will only coincide with the initial vector for $\sqrt{k}=\sin{\alpha}  = \frac{1}{n}\quad (n= 1, 2, \dots)$. Fig. ~\ref{fig:fig_p108_Ex2_b3} illustrates this in the $X-Y$-plane,  for n=3. Only after a transportation over three periods, will the transported vector coincide with the initial vector. The dotted area represented the unwrapped cone.
 \begin{figure}[H]%
     \centering
 {\input{D:/MathLatex/images/fig_p108_Ex2_b3.tex}}
 \caption{Parallel transportation along a closed for a cone with $\sin{\alpha}  = \frac{1}{3}$ .}
+\label{fig:fig_p108_Ex2_b3}
 \end{figure}
 $$\blacklozenge$$
 \newpage
